# auto_upload_blrec

./: .gitignore  README.md  app.py  celery_app.py  config.py  config.toml  config.yml  config_model.py  exceptions.py  flask_sever.py  loggerController.py  main.py  model.py  pyproject.toml  requirements.txt  room_config.yml  runbash.py  sever.py  test.py  tgnotice.py  upload.py  upload_to_bilibili.py  upload_to_rclone.py
celery_app/: celery_app.py
config/: config.yml
config-example/: config.yml
handler/: EventHandler.py  pushnotify.py  upload.py
handler/utils/: run_cmd.py  upload_to_rclone.py
server/: EventHandler.py  __init__.py  app.py
server/config/: config.py  record_model.py  utils.py
server/model/: blrec_model.py  info.py
server/router/: __init__.py  webhook.py
server/tasks/: video_process.py
server/tasks/pushnotify/: pushnotify.py
server/tasks/pushnotify/providers/: _requests.py  telegram.py
server/tasks/upload/: upload.py  upload_to_rclone.py
utils/: file_operation.py
utils/bili_upload_serves/: bili_upload.py
utils/db_operation/: db_operation.py  db_pool.py
utils/db_operation/database/: CookiesDAL.py  RecordDAL.py  db_config.py  models.py
utils/model/: record_model.py
