[tool.poetry]
name = "blrec-auto-upload"
version = "0.1.0"
description = ""
authors = ["qwerdvd <2450899274@qq.com>"]
readme = "README.md"
packages = [{include = "blrec_auto_upload"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
